2025-09-25  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Authors@R): New Maintainer
	* DESCRIPTION (Version, Date): New minor version and date

	* src/xptr.c (xptr_address): New argument to use '%lld' instead of '%p'
	* R/xptr.R (xptr_address): Support new argument
	* man/xptr_address.Rd: Documentation


